tests/models/struct/named/unit/fail/max_length.stderr
error: Support condition is alias, default
 --> tests/models/struct/named/unit/fail/max_length.rs:5:5
  |
5 |     value: (),
  |     ^^^^^
